# formalmath

./: .gitignore  README.md  metamath.py  pyproject.toml  setup.py
formalmath/: __init__.py
formalmath/metamath/: __init__.py
formalmath/setmm/: basic_classes.py
src/formalmath/metamath/: core.py
